--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -2,10 +2,8 @@
 fluxcal = ''                                        # Flux calibrator dataset, e.g. '3C295.MS'
 polcal = ''                                         # Polarised calibrator dataset, e.g. '3C286.MS'
 target = ''                                         # Target dataset, e.g. 'LH_WSRT.MS'
-basedir = ''                                        # Base directory for your data reduction, e.g
-                                                    # '/data/adebahr/apertif/LH_WSRT/'
-beam = '00'                                         # Beam number to work on for SELFCAL, CONTINUUM, LINE and
-                                                    # POLARISATIOn module, e.g. '00'
+basedir = ''                                        # Base directory for your data reduction, e.g '/data/adebahr/apertif/LH_WSRT/'
+beam = '00'                                         # Beam number to work on for SELFCAL, CONTINUUM, LINE and POLARISATIOn module, e.g. '00'
 rawsubdir = 'raw'                                   # Sub-directory for raw datasets, e.g. 'raw'
 crosscalsubdir = 'crosscal'                         # Sub-directory for cross calibration, e.g. 'crosscal'
 selfcalsubdir = 'selfcal'                           # Sub-directory for self calibration, e.g. 'selfcal'
@@ -21,8 +19,7 @@ prepare_date = '180817'                             # Date of the observation, f
 prepare_obsnum_fluxcal = '001'                      # Observation number of the flux calibrator, format: NNN, e.g. '001'
 prepare_obsnum_polcal = '002'                       # Observation number of the polarised calibrator, format: NNN, e.g. '002'
 prepare_obsnum_target = '003'                       # Observation number of the target, format: NNN, e.g. '003'
-prepare_target_beams = '00,01'                      # Target beam numbers to copy, format: 'all' for all beams, '' for
-                                                    # no target, and 'NN,MM,...' for certain beam numbers, e.g. '00,01'
+prepare_target_beams = '00,01'                      # Target beam numbers to copy, format: 'all' for all beams, '' for no target, and 'NN,MM,...' for certain beam numbers, e.g. '00,01'
 prepare_bypass_alta = False                         # Set to true if you don't want to fetch data from the ALTA archive
 
 [PREFLAG]
@@ -51,13 +48,6 @@ preflag_aoflagger_fluxcalstrat = 'fluxcal.rfis'     # Flagging strategy for the 
 preflag_aoflagger_polcalstrat = 'polcal.rfis'       # Flagging strategy for the polarised calibrator
 preflag_aoflagger_targetstrat = 'target.rfis'       # Flagging strategy for the target beams
 
-[CONVERT]
-convert_fluxcal = True                              # Convert the flux calibrator dataset
-convert_polcal = True                               # Convert the polarised calibrator dataset
-convert_target = True                               # Convert the target beam dataset
-convert_targetbeams = 'all'                         # Targetbeams to convert, options: 'all' or '00,01,02'
-convert_removeuvfits = True                         # Remove the UVFITS files
-
 [CROSSCAL]
 crosscal_refant = 'RT2'                             # Reference antenna used through all cross calibration steps
 crosscal_tec = False                                # TEC corrections for all datasets
@@ -69,44 +59,63 @@ crosscal_leakage = True                             # Polarisation leakage corre
 crosscal_polarisation_angle = True                  # Polarisation angle corrections
 crosscal_transfer_to_cal = True                     # Transfer corrections to calibrators
 crosscal_transfer_to_target = True                  # Transfer corrections to the target fields
-crosscal_transfer_to_target_targetbeams = 'all'     # Targetbeams to transger the solutions to, options: 'all'
-                                                    # or '00,01,02'
+crosscal_transfer_to_target_targetbeams = 'all'     # Targetbeams to transger the solutions to, options: 'all' or '00,01,02'
+
+[CONVERT]
+convert_fluxcal = True                              # Convert the flux calibrator dataset
+convert_polcal = True                               # Convert the polarised calibrator dataset
+convert_target = True                               # Convert the target beam dataset
+convert_targetbeams = 'all'                         # Targetbeams to convert, options: 'all' or '00,01,02'
+convert_removeuvfits = True                         # Remove the UVFITS files
 
 [SELFCAL]
-selfcal_image_imsize = 2049
-selfcal_image_cellsize = 4
-selfcal_refant = ''
-selfcal_splitdata = True
-selfcal_splitdata_chunkbandwidth = 0.02
-selfcal_splitdata_channelbandwidth = 0.001
-selfcal_flagantenna = '' # Be careful! MIRIAD format here. Antenna numbering starts with 1 and counts upwards.
-                         # No antenna names allowed.
-selfcal_flagline = True
-selfcal_flagline_sigma = 0.5
-selfcal_parametric = False
-selfcal_parametric_skymodel_radius = 0.5
-selfcal_parametric_skymodel_cutoff = 0.8
-selfcal_parametric_skymodel_distance = 30
-selfcal_parametric_solint = 5
-selfcal_parametric_uvmin = 0.5
-selfcal_parametric_uvmax = 1000
-selfcal_parametric_amp = False
-selfcal_standard_majorcycle = 3
-selfcal_standard_majorcycle_function = 'square'
-selfcal_standard_minorcycle = 3
-selfcal_standard_minorcycle_function = 'square'
-selfcal_standard_c0 = 10.0
-selfcal_standard_c1 = 5.0
-selfcal_standard_minorcycle0_dr = 5.0
-selfcal_standard_drinit = 50
-selfcal_standard_dr0 = 2.0
-selfcal_standard_nsigma = 45
-selfcal_standard_uvmin = [0.0,0.0,0.0]
-selfcal_standard_uvmax = [3000,3000,3000]
-selfcal_standard_solint = [3,1,0.5]
-selfcal_standard_amp = False
-selfcal_standard_amp_auto_limit = 1.0
-selfcal_standard_nfbin = 1
+selfcal_image_imsize = 3073                         # Image size in pixels
+selfcal_image_cellsize = 4                          # Pixel size in arcseconds
+selfcal_refant = '1'                                # Reference antenna used for self-calibration, MIRIAD numbering here
+selfcal_average = True                              # Average the data to one channel per subband for self-calibration
+selfcal_flagline = True                             # Flag residual RFI/HI emission for self-calibration and continuum imaging
+selfcal_flagline_sigma = 0.5                        # Sensitivity parameter to flag RFI/HI emission
+selfcal_parametric = True                           # Do parametric self-calibration
+selfcal_parametric_skymodel_radius = 0.5            # Radius from the pointing centre in degrees until which sources are considered
+selfcal_parametric_skymodel_cutoff = 0.8            # Cutoff for the appaerant flux in the skymodel to use sources (1.0 = all sources in catalogues)
+selfcal_parametric_skymodel_distance = 30           # Distance between NVSS/FIRST and WENSS sources in arcseconds to count as the same source
+selfcal_parametric_solint = 'auto'                  # Time solution interval in minutes or 'auto' for automatic calculation
+selfcal_parametric_uvmin = 0.5                      # minimum u,v-limit in klambda
+selfcal_parametric_uvmax = 1000                     # maximum u,v-limit in klambda
+selfcal_parametric_amp = False                      # Parametric amplitude calibration
+selfcal_parametric_nfbin = 16                       # Number of solution intervals over frequency for parametric calibration
+selfcal_phase = True                                # Do the standard iterative self-calibration
+selfcal_phase_majorcycle = 3                        # Maximum number of major cycles
+selfcal_phase_majorcycle_function = 'power'         # Type of function to decrease threshold for major cycles, possible values: 'power'
+selfcal_phase_minorcycle = 3                        # Maximum number of minor cycles within each major cycle
+selfcal_phase_minorcycle_function = 'square'        # Type of function to decrease threshold for minor cycles, possible values: 'square', 'power', 'linear'
+selfcal_phase_c0 = 10.0                             # c0 parameter to calculate noise DR with (c0 + minor_cycle * c0) * (major_cycle + 1)
+selfcal_phase_c1 = 5.0                              # c1 parameter for clean threshold with mask_threshold / c1
+selfcal_phase_drinit = 30                           # drinit parmeter to calculate dynamcic range limits in major cycles with drinit * np.power(dr0, major cycle)
+selfcal_phase_dr0 = 2.0                             # dr0 parameter to calculate dynamcic range limits in major cycles with drinit * np.power(dr0, major cycle)
+selfcal_phase_mindr = 5.0                           # minimum dynamic range for masking if calculated thresholds are lower
+selfcal_phase_nsigma = 5                            # Factor to calculate theoretical noise threshold with nsigma * theoretical_noise
+selfcal_phase_uvmin = [0.0,0.0,0.0]                 # Minimum u,v-range to use for phase self-calibration during major cylces, 1 value per cycle
+selfcal_phase_uvmax = [3000,3000,3000]              # Maximum u,v-range to use for phase self-calibration during major cylces, 1 value per cycle
+selfcal_phase_solint = 'auto'                       # Selfcal solution intervals for each major cycle as a list (e.g. [10,5,3]) or 'auto' for an automatic calculation
+selfcal_phase_nfbin = 16                            # Number of frequency solution intervals
+selfcal_phase_gaussianity = 1e-2                    # Gaussianity parameter for last residual image to verify phase calibration as good (see scipy.stats.normaltest)
+selfcal_amp = True                                  # Do amplitude calibration, possible values True, False, 'auto'
+selfcal_amp_auto_limit = 1.0                        # Threshold for the sum of clean components in Jy in the last model to set amp calibration True in auto mode
+selfcal_amp_minorcycle = 3                          # Maximum number of additional minor cycles to create amplitude model
+selfcal_amp_minorcycle_function = 'square'          # Type of function to decrease threshold for minor cycles, possible values: 'square', 'power', 'linear', should be the same as for phase calibration
+selfcal_amp_c0 = 10.0                               # c0 parameter to calculate noise DR with (c0 + minor_cycle * c0) * (major_cycle + 1), should be the same as for phase calibration
+selfcal_amp_c1 = 5.0                                # c1 parameter for clean threshold with mask_threshold / c1, should be the same as for phase calibration
+selfcal_amp_drinit = 30                             # drinit parmeter to calculate dynamcic range limits in major cycles with drinit * np.power(dr0, major cycle), should be the same as for phase calibration
+selfcal_amp_dr0 = 2.0                               # dr0 parameter to calculate dynamcic range limits in major cycles with drinit * np.power(dr0, major cycle), should be the same as for phase calibration
+selfcal_amp_mindr = 5.0                             # minimum dynamic range for masking if calculated thresholds are lower, should be the same as for phase calibration
+selfcal_amp_nsigma = 5                              # Factor to calculate theoretical noise threshold with nsigma * theoretical_noise, should be the same as for phase calibration
+selfcal_amp_uvmin = 0.0                             # Minimum u,v-range to use for amplitude self-calibration during major cylces
+selfcal_amp_uvmax = 3000                            # Maximum u,v-range to use for amplitude self-calibration during major cylces
+selfcal_amp_solint = 'auto'                         # Selfcal solution interval for amplitude calibration (e.g. 20) or 'auto' for an automatic calculation
+selfcal_amp_nfbin = 16                              # Number of solution intervals over frequency for amplitude calibration
+selfcal_amp_gaussianity = 1e-2                      # Gaussianity parameter for amplitude residual image to verify amp calibration as good (see scipy.stats.normaltest)
+selfcal_amp_ratio = 1.2                             # Ratio of the dirty image min, max, std before and after amplitude calibration to verify amplitude calibration as good
 
 [CONTINUUM]
 continuum_image_imsize = 2049
