--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -72,6 +72,7 @@ convert_removeuvfits = True                         # Remove the UVFITS files
 selfcal_image_imsize = 3073                         # Image size in pixels
 selfcal_image_cellsize = 4                          # Pixel size in arcseconds
 selfcal_refant = '1'                                # Reference antenna used for self-calibration, MIRIAD numbering here
+selfcal_gaussianity = 1e-2                          # Gaussianity parameter for residual images in all steps to verify them as good (see scipy.stats.normaltest)
 selfcal_average = True                              # Average the data to one channel per subband for self-calibration
 selfcal_flagline = True                             # Flag residual RFI/HI emission for self-calibration and continuum imaging
 selfcal_flagline_sigma = 0.5                        # Sensitivity parameter to flag RFI/HI emission
@@ -99,7 +100,6 @@ selfcal_phase_uvmin = [0.0,0.0,0.0]                 # Minimum u,v-range to use f
 selfcal_phase_uvmax = [3000,3000,3000]              # Maximum u,v-range to use for phase self-calibration during major cylces, 1 value per cycle
 selfcal_phase_solint = 'auto'                       # Selfcal solution intervals for each major cycle as a list (e.g. [10,5,3]) or 'auto' for an automatic calculation
 selfcal_phase_nfbin = 16                            # Number of frequency solution intervals
-selfcal_phase_gaussianity = 1e-2                    # Gaussianity parameter for last residual image to verify phase calibration as good (see scipy.stats.normaltest)
 selfcal_amp = True                                  # Do amplitude calibration, possible values True, False, 'auto'
 selfcal_amp_auto_limit = 1.0                        # Threshold for the sum of clean components in Jy in the last model to set amp calibration True in auto mode
 selfcal_amp_minorcycle = 3                          # Maximum number of additional minor cycles to create amplitude model
@@ -114,10 +114,10 @@ selfcal_amp_uvmin = 0.0                             # Minimum u,v-range to use f
 selfcal_amp_uvmax = 3000                            # Maximum u,v-range to use for amplitude self-calibration during major cycles
 selfcal_amp_solint = 'auto'                         # Selfcal solution interval for amplitude calibration (e.g. 20) or 'auto' for an automatic calculation
 selfcal_amp_nfbin = 16                              # Number of solution intervals over frequency for amplitude calibration
-selfcal_amp_gaussianity = 1e-2                      # Gaussianity parameter for amplitude residual image to verify amp calibration as good (see scipy.stats.normaltest)
 selfcal_amp_ratio = 1.2                             # Ratio of the dirty image min, max, std before and after amplitude calibration to verify amplitude calibration as good
 
 [CONTINUUM]
+continuum_gaussianity = 1e-2                        # Gaussianity parameter for residual images in all steps to verify them as good (see scipy.stats.normaltest)
 continuum_mfimage = True                            # Multi-frequency continuum imaging
 continuum_mfimage_imsize = 3073                     # Image size in pixels
 continuum_mfimage_cellsize = 4                      # Pixel size in arcseconds
@@ -126,20 +126,16 @@ continuum_mfimage_c1 = 5.0                          # c1 parameter for clean thr
 continuum_mfimage_drinc = 10.0                      # Increment for each iteration for the masking using max(residual map)/drinc
 continuum_mfimage_mindr = 10.0                      # Minimum increase in dynamic range for the first cycle (in case calculated DR is lower)
 continuum_mfimage_nsigma = 5                        # Factor to calculate theoretical noise threshold with nsigma * theoretical_noise
-continuum_mf_gaussianity = 1e-2                     # Gaussianity parameter for amplitude residual image to verify amp calibration as good (see scipy.stats.normaltest)
-continuum_chunkimage = True
-continuum_chunkimage_startchannels = [0,32,64,96,128,160,192,224]
-continuum_chunkimage_endchannels = [31,63,95,127,159,191,223,255]
-continuum_chunkimage_imsize = 2049
-continuum_chunkimage_cellsize = 4
-continuum_chunkimage_minorcycle = 5
-continuum_chunkimage_minorcycle_function = 'square'
-continuum_chunkimage_c0 = 10.0
-continuum_chunkimage_c1 = 5.0
-continuum_chunkimage_drinit = 30
-continuum_chunkimage_dr0 = 2.0
-continuum_chunkimage_mindr = 5.0
-continuum_chunkimage_nsigma = 5
+continuum_chunkimage = True                         # Chunk continuum imaging
+continuum_chunkimage_startchannels = [0,32,64,96,128,160,192,224] # Starting subbands for each chunk
+continuum_chunkimage_endchannels = [31,63,95,127,159,191,223,255] # Ending subband for each chunk
+continuum_chunkimage_imsize = 2049                  # Image size of the chunk images
+continuum_chunkimage_cellsize = 4                   # Cell size of the chunk images
+continuum_chunkimage_minorcycle = 5                 # Maximum minor cycles after iterative chunk imaging is stopped
+continuum_chunkimage_c1 = 5.0                       # c1 parameter for clean threshold with mask_threshold / c1
+continuum_chunkimage_drinc = 10.0                   # Increment for each iteration for the masking using max(residual map)/drinc
+continuum_chunkimage_mindr = 5.0                    # Minimum increase in dynamic range for the first cycle (in case calculated DR is lower)
+continuum_chunkimage_nsigma = 5                     # Factor to calculate theoretical noise threshold with nsigma * theoretical_noise
 
 [LINE]
 line_splitdata = True
