--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -140,8 +140,8 @@ continuum_chunkimage_nsigma = 5                     # Factor to calculate theore
 
 [LINE]
 line_splitdata = True
-line_splitdata_chunkbandwidth = 0.02
-line_splitdata_channelbandwidth = 0.000012
+line_splitdata_chunkbandwidth = 0.05
+line_splitdata_channelbandwidth = 0.000048
 line_transfergains = True
 line_subtract = True
 line_subtract_mode = 'uvmodel'
@@ -157,11 +157,12 @@ line_subtract_mode_uvmodel_imsize = 513
 line_subtract_mode_uvmodel_cellsize = 10
 line_subtract_mode_uvmodel_minorcycle0_dr = 3.0
 line_image = True
-line_image_channels = '9650,9800' # Two comma seperated values as a string with the beginning and end channels, zero based
-line_image_imsize = 2049
-line_image_cellsize = 4
+line_image_channels = '3001,4024' # Two comma seperated values as a string with the beginning and end channels, zero based
+line_image_imsize = 661
+line_image_cellsize = 6
 line_image_centre = ''
-line_image_robust = -2
+line_image_robust = 1.0
+line_clean = False
 line_image_ratio_limit = 1.05
 line_image_c0 = 10.0
 line_image_c1 = 5.0
@@ -169,7 +170,7 @@ line_image_nsigma = 45
 line_image_minorcycle0_dr = 5.0
 line_image_dr0 = 2.0
 line_image_restorbeam = ''
-line_image_convolbeam = '30,30,0.0'
+line_image_convolbeam = ''
 
 [MOSAIC]
 mosaic_continuum_stack = True
