--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -67,7 +67,8 @@ convert_polcal = True                               # Convert the polarised cali
 convert_target = True                               # Convert the target beam dataset
 convert_targetbeams = 'all'                         # Targetbeams to convert, options: 'all' or '00,01,02'
 convert_removeuvfits = False                        # Remove the UVFITS files
-convert_removems = True                             # Remove measurement sets
+convert_removems = True                             # Remove target measurement sets
+convert_averagems = True                            # Save averaged down target measurement sets
 
 [SELFCAL]
 selfcal_image_imsize = 3073                         # Image size in pixels
