--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -141,9 +141,9 @@ continuum_chunkimage_nsigma = 5                     # Factor to calculate theore
 [LINE]
 line_splitdata = True
 line_splitdata_chunkbandwidth = 0.05
-line_splitdata_channelbandwidth = 0.000048
+line_splitdata_channelbandwidth = 0.00004
 line_transfergains = True
-line_subtract = True
+line_subtract = False
 line_subtract_mode = 'uvmodel'
 line_subtract_mode_uvmodel_majorcycle_function = 'square'
 line_subtract_mode_uvmodel_minorcycle_function = 'square'
@@ -157,7 +157,7 @@ line_subtract_mode_uvmodel_imsize = 513
 line_subtract_mode_uvmodel_cellsize = 10
 line_subtract_mode_uvmodel_minorcycle0_dr = 3.0
 line_image = True
-line_image_channels = '3001,4024' # Two comma seperated values as a string with the beginning and end channels, zero based
+line_image_channels = '2000,4000' # Two comma seperated values as a string with the beginning and end channels, zero based
 line_image_imsize = 661
 line_image_cellsize = 6
 line_image_centre = ''
