--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -174,6 +174,11 @@ line_image_dr0 = 2.0
 line_image_restorbeam = ''
 line_image_convolbeam = ''
 
+[POLARISATION]
+polarisation_qu = True                              # Create Q-/U-images
+polarisation_qu_startsubband = 0                   # First subband to image
+polarisation_qu_endsubband = 383                    # Last subband to image
+
 [MOSAIC]
 mosaic_continuum_stack = True
 mosaic_continuum_chunks = True
