--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -32,7 +32,7 @@ prepare_bypass_alta = False                         # Set to true if you don't w
 phaseslope_correction = False                       # Enable/Disable phase slope correction
 
 [SPLIT]
-split_startchannel = 12288                          # First channel to split out
+split_startchannel = 6144                          # First channel to split out
 split_endchannel = 24575                           # Last channel to split out
 
 [PREFLAG]
@@ -46,8 +46,8 @@ preflag_manualflag_target = True                    # Run manualflag options for
 preflag_manualflag_auto = False                     # Flag auto-correlations
 preflag_manualflag_antenna = ''                     # Antennas to flag, e.g. 'RT2,RT3,RT4'
 preflag_manualflag_corr = ''                        # Correlations to flag, e.g. 'XX,YX'
-preflag_manualflag_baseline = ''             # Flag certai baselines, e.g. 'RT2&RT3,RT5&RT6'
-preflag_manualflag_channel = '0~1024'               # Channels or channel ranges to flag, e.g. '0~3054;10977~16384'
+preflag_manualflag_baseline = ''                    # Flag certain baselines, e.g. 'RT2&RT3,RT5&RT6'
+preflag_manualflag_channel = '18368~18431'          # Channels or channel ranges to flag, e.g. '0~3054;10977~16384'
 preflag_manualflag_time = ''                        # Time range to flag, e.g. '09:14:0~09:54:0'
 preflag_manualflag_clipzeros = False                # Flags all Zero-valued data (done by default AOFlagger strategies as well)
 preflag_manualflag_file = ''                        # File with flagging information
