--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -162,7 +162,8 @@ continuum_chunkimage_robust = -2                       # Robust weighting settin
 line_beams = 'all'                                  # Beams to run line imaging on, list of integers (e.g. 1,2,3) or 'all'
 line_first_level_threads = 32                       # set the first level threads for line
 line_second_level_threads = 16                      # set the second level threads for line
-line_cube_channel_list =  [[1057, 4710], [4387, 8040], [7717, 11370], [11047, 12265]]
+#line_cube_channel_list =  [[1057, 4710], [4387, 8040], [7717, 11370], [11047, 12265]]
+line_cube_channel_list =  [[1, 3480], [3157, 6810], [6487, 10140], [9818, 11035]]
 line_cube_channelwidth_list = [3.6621e-05, 3.6621e-05, 3.6621e-05, 1.2207e-05] # list of channel widths of the cube for splitting data
 line_splitdata = True                               # if True: split the band into subbands for faster processing
 line_splitdata_chunkbandwidth = 0.0046875           # in GHz: defines number of subbands and is 0.15/(number of subbands): default for 16 subbands is 0.009375 = 0.3/16 GHz or 32 chunks with 0.0046875
