--- a/apercal/modules/default_225MHz.cfg
+++ b/apercal/modules/default_225MHz.cfg
@@ -47,7 +47,7 @@ preflag_manualflag_auto = False                     # Flag auto-correlations
 preflag_manualflag_antenna = ''                     # Antennas to flag, e.g. 'RT2,RT3,RT4'
 preflag_manualflag_corr = ''                        # Correlations to flag, e.g. 'XX,YX'
 preflag_manualflag_baseline = ''                    # Flag certain baselines, e.g. 'RT2&RT3,RT5&RT6'
-preflag_manualflag_channel = '1452~1492MHz'         # Channels or channel ranges to flag, e.g. '0~3054;10977~16384'
+preflag_manualflag_channel = ''                     # Channels or channel ranges to flag, e.g. '0~3054;10977~16384'
 preflag_manualflag_time = ''                        # Time range to flag, e.g. '09:14:0~09:54:0'
 preflag_manualflag_clipzeros = False                # Flags all Zero-valued data (done by default AOFlagger strategies as well)
 preflag_manualflag_file = ''                        # File with flagging information
